--- a/product.html
+++ b/product.html
@@ -9,14 +9,8 @@
 <body>
   <div id="app">
 
-    <!-- ====== TOP BAR / NAV BACK ====== -->
-    <nav class="nav">
-      <a href="/" class="active">← Dashboard</a>
-      <span class="nav-right"><a id="logoutLink">Logout</a></span>
-    </nav>
-
-    <!-- ====== AUTH (same gate as index) ====== -->
-    <div id="login" class="auth">
+    <!-- ========= LOGIN (shown if not authenticated) ========= -->
+    <div id="login" class="auth" style="display:none">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
       <div class="row">
@@ -25,145 +19,165 @@
       </div>
     </div>
 
-    <!-- ====== MAIN ====== -->
+    <!-- ========= MAIN ========= -->
     <div id="main" style="display:none">
-      <div class="container">
-        <header class="section">
-          <h2 id="pdTitle">Product</h2>
-          <div class="muted" id="pdSku"></div>
-        </header>
+      <nav class="nav">
+        <a href="/" class="active">← Dashboard</a>
+        <span class="nav-right"><a id="logoutLink">Logout</a></span>
+      </nav>
 
-        <!-- 1) Stock & Ad Spend by Country (for THIS product) -->
+      <div class="container">
+
+        <!-- ======= HEADER ======= -->
         <section class="section">
-          <h3>Stock &amp; Ad Spend by Country</h3>
-          <table class="table" id="pdStockTbl">
-            <thead>
-              <tr><th>Country</th><th>Available Stock</th><th>Total Ad Spend (USD)</th></tr>
-            </thead>
-            <tbody id="pdStockBody"><!-- rows --></tbody>
-            <tfoot>
-              <tr class="totals">
-                <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0.00</th>
-              </tr>
-            </tfoot>
-          </table>
+          <h2 id="pdTitle">Product</h2>
+          <div id="pdSku" class="muted"></div>
           <div class="badge" id="pdTransitBadge">Transit total: 0</div>
         </section>
 
-        <!-- 2) Profit + Advertising Budget (manual, editable per country) -->
+        <!-- ======= 1) STOCK & AD SPEND BY COUNTRY ======= -->
         <section class="section">
-          <h3>Profit + Advertising Budget (per country)</h3>
-          <div class="row wrap">
-            <select id="pdPBCountry" class="input"></select>
-            <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01"/>
-            <button id="pdPBSave" class="btn">Save</button>
-          </div>
-          <table class="table" id="pdPBTable">
-            <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
-            <tbody id="pdPBBBody"><!-- rows --></tbody>
+          <h3>Stock &amp; Ad Spend by Country</h3>
+          <table class="table">
+            <thead>
+              <tr><th>Country</th><th>Stock</th><th>Total Ad Spend (USD)</th></tr>
+            </thead>
+            <tbody id="pdStockBody"><!-- rows injected --></tbody>
+            <tfoot>
+              <tr class="totals">
+                <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th>
+              </tr>
+            </tfoot>
           </table>
         </section>
 
-        <!-- 3) Daily Ad Spend (replace per country+platform for THIS product) -->
+        <!-- ======= 2) PROFIT + ADVERTISING BUDGET (manual, per country) ======= -->
+        <section class="section">
+          <h3>Profit + Advertising Budget (Manual, per country)</h3>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdPBCountry" class="input"></select>
+              <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01" min="0"/>
+              <button id="pdPBSave" class="btn">Save</button>
+            </div>
+          </div>
+          <table class="table">
+            <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
+            <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+          </table>
+        </section>
+
+        <!-- ======= 3) DAILY AD SPEND (replace existing) ======= -->
         <section class="section">
           <h3>Daily Ad Spend</h3>
-          <div class="row wrap">
-            <select id="pdAdCountry" class="input"></select>
-            <select id="pdAdPlatform" class="input">
-              <option value="facebook">Facebook</option>
-              <option value="tiktok">TikTok</option>
-              <option value="google">Google</option>
-            </select>
-            <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-            <button id="pdAdSave" class="btn">Save/Replace</button>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdAdCountry" class="input"></select>
+              <select id="pdAdPlatform" class="input">
+                <option value="facebook">Facebook</option>
+                <option value="tiktok">TikTok</option>
+                <option value="google">Google</option>
+              </select>
+              <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" step="0.01" min="0"/>
+              <button id="pdAdSave" class="btn">Save / Replace</button>
+            </div>
+            <small>Saving again for the same <b>country + platform</b> replaces the current value.</small>
           </div>
-          <table class="table" id="pdAdTable">
+          <table class="table">
             <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
-            <tbody id="pdAdBody"><!-- rows --></tbody>
+            <tbody id="pdAdBody"><!-- rows injected --></tbody>
           </table>
         </section>
 
-        <!-- 4) Remittance / Profit entries (THIS product) -->
+        <!-- ======= 4) REMITTANCE / PROFIT ENTRIES ======= -->
         <section class="section">
           <h3>Remittance / Profit Entries</h3>
-          <div class="row wrap">
-            <input id="pdRStart" type="date" class="input"/>
-            <input id="pdREnd" type="date" class="input"/>
-            <select id="pdRCountry" class="input"></select>
-            <input id="pdROrders" type="number" class="input" placeholder="Orders" min="0"/>
-            <input id="pdRPieces" type="number" class="input" placeholder="Pieces" min="0"/>
-            <input id="pdRRevenue" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
-            <input id="pdRAdSpend" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-            <input id="pdRExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
-            <button id="pdRAdd" class="btn">Add</button>
+          <div class="card">
+            <div class="row wrap">
+              <input id="pdRStart" type="date" class="input"/>
+              <input id="pdREnd" type="date" class="input"/>
+              <select id="pdRCountry" class="input"></select>
+              <input id="pdROrders" type="number" class="input" placeholder="Orders" min="0"/>
+              <input id="pdRPieces" type="number" class="input" placeholder="Pieces" min="0"/>
+              <input id="pdRRevenue" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
+              <input id="pdRAdSpend" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
+              <input id="pdRExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
+              <button id="pdRAdd" class="btn">Add</button>
+            </div>
           </div>
-          <table class="table" id="pdRTable">
-            <thead><tr>
-              <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th>
-              <th>Revenue</th><th>Ad Spend</th><th>Extra/pc</th><th>Profit</th>
-            </tr></thead>
-            <tbody id="pdRBody"><!-- rows --></tbody>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th>
+                <th>Revenue</th><th>Ad Spend</th><th>Extra/pc</th><th>Profit</th>
+              </tr>
+            </thead>
+            <tbody id="pdRBody"><!-- rows injected --></tbody>
             <tfoot>
-              <tr class="totals"><th colspan="4">Totals</th>
+              <tr class="totals">
+                <th colspan="4">Totals</th>
                 <th id="pdRRevT">0</th><th id="pdRAdT">0</th><th id="pdRExtraT">0</th><th id="pdRProfitT">0</th>
               </tr>
             </tfoot>
           </table>
         </section>
 
-        <!-- 5) Stock Movement (THIS product) -->
+        <!-- ======= 5) STOCK MOVEMENT (create shipment) ======= -->
         <section class="section">
           <h3>Stock Movement</h3>
-          <div class="row wrap">
-            <select id="pdMvFrom" class="input"></select>
-            <span>→</span>
-            <select id="pdMvTo" class="input"></select>
-            <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
-            <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-            <button id="pdMvAdd" class="btn">Add Movement</button>
+          <div class="card">
+            <div class="row wrap">
+              <select id="pdMvFrom" class="input"></select>
+              <span>→</span>
+              <select id="pdMvTo" class="input"></select>
+              <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+              <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+              <button id="pdMvAdd" class="btn">Add Movement</button>
+            </div>
+            <small>When marked as arrived, the system will <b>add to destination</b> and <b>deduct from origin</b>.</small>
           </div>
         </section>
 
-        <!-- 6) Transit China → Kenya (THIS product) -->
+        <!-- ======= 6) TRANSIT: CHINA → KENYA ======= -->
         <section class="section">
           <h3>Transit (China → Kenya)</h3>
-          <table class="table" id="pdShipCK">
-            <thead><tr>
-              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-            </tr></thead>
-            <tbody id="pdShipCKBody"><!-- rows --></tbody>
+          <table class="table">
+            <thead>
+              <tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr>
+            </thead>
+            <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
           </table>
         </section>
 
-        <!-- 7) Transit Inter-country (THIS product) -->
+        <!-- ======= 7) TRANSIT: INTER-COUNTRY ======= -->
         <section class="section">
           <h3>Transit (Inter-country)</h3>
-          <table class="table" id="pdShipIC">
-            <thead><tr>
-              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-            </tr></thead>
-            <tbody id="pdShipICBody"><!-- rows --></tbody>
+          <table class="table">
+            <thead>
+              <tr><th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr>
+            </thead>
+            <tbody id="pdShipICBody"><!-- rows injected --></tbody>
           </table>
         </section>
 
-        <!-- 8) Lifetime (THIS product) -->
+        <!-- ======= 8) LIFETIME (THIS PRODUCT) ======= -->
         <section class="section">
           <h3>Lifetime (This Product)</h3>
-          <div class="row wrap">
-            <input id="pdLPStart" type="date" class="input"/>
-            <input id="pdLPEnd" type="date" class="input"/>
-            <button id="pdLPRun" class="btn">Run</button>
+          <div class="card">
+            <div class="row wrap">
+              <input id="pdLPStart" type="date" class="input"/>
+              <input id="pdLPEnd" type="date" class="input"/>
+              <button id="pdLPRun" class="btn">Run</button>
+            </div>
           </div>
-          <table class="table" id="pdLPTbl">
-            <thead><tr>
-              <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th>
-              <th>Base Cost</th><th>Pieces</th><th>Profit</th>
-            </tr></thead>
-            <tbody id="pdLPBody"><!-- rows --></tbody>
+          <table class="table">
+            <thead>
+              <tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr>
+            </thead>
+            <tbody id="pdLPBody"><!-- rows injected --></tbody>
             <tfoot>
-              <tr class="totals"><th>Totals</th>
+              <tr class="totals">
+                <th>Totals</th>
                 <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
                 <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
               </tr>
@@ -171,35 +185,35 @@
           </table>
         </section>
 
-        <!-- 9) Influencers (add/select/delete + spend by period/country) -->
+        <!-- ======= 9) INFLUENCER SPEND ======= -->
         <section class="section">
           <h3>Influencer Spend</h3>
-          <div class="row wrap">
-            <input id="pdInfName" class="input" placeholder="New influencer name"/>
-            <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
-            <select id="pdInfCountry" class="input"></select>
-            <button id="pdInfAdd" class="btn">Add Influencer</button>
+          <div class="card">
+            <div class="row wrap">
+              <input id="pdInfName" class="input" placeholder="New influencer name"/>
+              <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+              <select id="pdInfCountry" class="input"></select>
+              <button id="pdInfAdd" class="btn">Add Influencer</button>
+            </div>
+            <div class="row wrap">
+              <input id="pdInfDate" type="date" class="input"/>
+              <select id="pdInfSelect" class="input"></select>
+              <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
+              <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+            </div>
+            <div class="row wrap">
+              <input id="pdInfStart" type="date" class="input"/>
+              <input id="pdInfEnd" type="date" class="input"/>
+              <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+              <button id="pdInfRun" class="btn outline">Filter</button>
+            </div>
           </div>
 
-          <div class="row wrap">
-            <input id="pdInfDate" type="date" class="input"/>
-            <select id="pdInfSelect" class="input"></select>
-            <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
-            <button id="pdInfSpendAdd" class="btn">Add Spend</button>
-          </div>
-
-          <div class="row wrap">
-            <input id="pdInfStart" type="date" class="input"/>
-            <input id="pdInfEnd" type="date" class="input"/>
-            <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-            <button id="pdInfRun" class="btn outline">Filter</button>
-          </div>
-
-          <table class="table" id="pdInfTable">
-            <thead><tr><th>Date</th><th>Country</th><th>Name</th><th>Social</th><th>Spend (USD)</th><th></th></tr></thead>
-            <tbody id="pdInfBody"><!-- rows --></tbody>
+          <table class="table">
+            <thead><tr><th>Date</th><th>Country</th><th>Name</th><th>Social</th><th>Amount</th><th></th></tr></thead>
+            <tbody id="pdInfBody"><!-- rows injected --></tbody>
             <tfoot>
-              <tr class="totals"><th colspan="4">Total in period</th><th id="pdInfTotal">0</th><th></th></tr>
+              <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
             </tfoot>
           </table>
         </section>
@@ -208,7 +222,6 @@
     </div><!-- /main -->
   </div><!-- /app -->
 
-  <!-- Reuse the same front-end script; it detects product mode via ?id= -->
   <script src="/public/app.js"></script>
 </body>
 </html>
