--- a/product.html
+++ b/product.html
@@ -1,206 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EAS Tracker – Product</title>
-  <link rel="stylesheet" href="/public/styles.css"/>
+  <title>EAS Tracker • Product</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div id="app">
+  <!-- ============ NAV ============ -->
   <nav class="nav">
-    <a href="/">← Dashboard</a>
-    <span class="nav-right badge">EAS Product Page</span>
+    <a href="index.html">← Dashboard</a>
+    <span class="badge">Product View</span>
+    <a id="logoutLink" class="nav-right" href="#">Logout</a>
   </nav>
 
-  <div class="container">
+  <div class="container" id="productPage">
     <!-- Header -->
     <div id="productHeader">
-      <h2 id="pdTitle">Product</h2>
-      <span id="pdSku" class="muted"></span>
-      <span id="pdTransitBadge" class="badge"></span>
+      <div id="pdTitle">—</div>
+      <div id="pdSku" class="muted"></div>
     </div>
 
-    <!-- 1) Stock & Ad Spend by Country -->
+    <!-- ====== Stock & Ad Spend by Country (THIS PRODUCT ONLY) ====== -->
     <section class="section">
-      <h2>Stock &amp; Ad Spend by Country</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Country</th>
-            <th>Approx. Stock</th>
-            <th>Total Ad Spend (USD)</th>
-          </tr>
-        </thead>
-        <tbody id="pdStockBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pdStockTotal">0</th>
-            <th id="pdAdTotal">0</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
-
-    <!-- 2) Profit + Advertising Budget (Manual Reference) -->
-    <section class="section">
-      <h2>Profit + Advertising Budget (per country)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdPBCountry" class="input"></select>
-          <input id="pdPBValue" type="number" class="input" step="0.01" placeholder="Budget (USD)"/>
-          <button id="pdPBSave" class="btn">Save</button>
-        </div>
-        <small>Manual reference budgets per country (not auto-filled).</small>
-      </div>
-      <table class="table">
-        <thead>
-          <tr><th>Country</th><th>Budget (USD)</th><th>Actions</th></tr>
-        </thead>
-        <tbody id="pdPBBBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 3) Daily Ad Spend -->
-    <section class="section">
-      <h2>Daily Ad Spend</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdAdCountry" class="input"></select>
-          <select id="pdAdPlatform" class="input">
-            <option value="facebook">Facebook</option>
-            <option value="tiktok">TikTok</option>
-            <option value="google">Google</option>
-          </select>
-          <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
-          <button id="pdAdSave" class="btn">Save / Replace</button>
-        </div>
-        <small>Saving again for same country + platform replaces previous value.</small>
-      </div>
-      <table class="table">
-        <thead>
-          <tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr>
-        </thead>
-        <tbody id="pdAdBody"><!-- rows injected --></tbody>
-      </table>
-    </section>
-
-    <!-- 4) Stock Movement -->
-    <section class="section">
-      <h2>Stock Movement</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdMvFrom" class="input"></select>
-          <span>→</span>
-          <select id="pdMvTo" class="input"></select>
-          <input id="pdMvQty" type="number" class="input" min="0" placeholder="Qty"/>
-          <input id="pdMvShip" type="number" class="input" min="0" step="0.01" placeholder="Shipping Cost (USD)"/>
-          <button id="pdMvAdd" class="btn">Add Movement</button>
-        </div>
-        <small>When marked as arrived, system adds to destination & deducts from origin.</small>
+      <h2>Stock & Ad Spend by Country</h2>
+      <div class="table-scroll">
+        <table class="table compact">
+          <thead>
+            <tr><th>Country</th><th>Available Stock</th><th>Ad Spend</th></tr>
+          </thead>
+          <tbody id="pdStockBody"></tbody>
+          <tfoot>
+            <tr class="totals">
+              <th>Total</th>
+              <th id="pdStockTotal">0</th>
+              <th id="pdAdTotal">0</th>
+            </tr>
+          </tfoot>
+        </table>
       </div>
     </section>
 
-    <!-- 5) Transit China → Kenya -->
+    <!-- ====== Daily Ad Spend (Replace) ====== -->
     <section class="section">
-      <h2>Transit (China → Kenya)</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
-      </table>
+      <h2>Add / Replace Daily Ad Spend</h2>
+      <div class="row wrap">
+        <select id="pdAdCountry" class="input country"></select>
+        <select id="pdAdPlatform" class="input">
+          <option value="" disabled selected>Platform</option>
+          <option>Meta</option>
+          <option>TikTok</option>
+          <option>Google</option>
+          <option>Other</option>
+        </select>
+        <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" />
+        <button id="pdAdSave" class="btn">Save</button>
+      </div>
+
+      <div class="table-scroll" style="margin-top:10px;">
+        <table class="table compact">
+          <thead><tr><th>Country</th><th>Platform</th><th>Amount</th></tr></thead>
+          <tbody id="pdAdBody"></tbody>
+        </table>
+      </div>
     </section>
 
-    <!-- 6) Transit Inter-country -->
+    <!-- ====== Manual Profit + Ads Budget per Country ====== -->
     <section class="section">
-      <h2>Transit (Inter-country)</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-            <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
-      </table>
+      <h2>Manual Profit + Ads Budget (per Country)</h2>
+      <div class="row wrap">
+        <select id="pdPBCountry" class="input country"></select>
+        <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)"/>
+        <button id="pdPBSave" class="btn">Save Budget</button>
+      </div>
+
+      <div class="table-scroll" style="margin-top:10px;">
+        <table class="table compact">
+          <thead><tr><th>Country</th><th>Budget</th><th>Actions</th></tr></thead>
+          <tbody id="pdPBBBody"></tbody>
+        </table>
+      </div>
     </section>
 
-    <!-- 7) Lifetime (This Product) -->
+    <!-- ====== Shipments (Movements) ====== -->
     <section class="section">
-      <h2>Lifetime (This Product)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <input id="pdLPStart" type="date" class="input"/>
-          <input id="pdLPEnd" type="date" class="input"/>
-          <button id="pdLPRun" class="btn">Run</button>
+      <h2>Create Shipment (Movement)</h2>
+      <div class="row wrap">
+        <select id="pdMvFrom" class="input country"></select>
+        <span>→</span>
+        <select id="pdMvTo" class="input country"></select>
+        <input id="pdMvQty" type="number" class="input" placeholder="Qty" />
+        <input id="pdMvShip" type="number" class="input" placeholder="Ship Cost (USD)" />
+        <button id="pdMvAdd" class="btn">Add Shipment</button>
+      </div>
+
+      <div class="row wrap" style="margin-top:10px;">
+        <div class="card" style="flex:1; min-width:320px;">
+          <div class="h">China → Kenya (Transit)</div>
+          <div class="table-scroll">
+            <table class="table compact">
+              <thead>
+                <tr>
+                  <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+                  <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="pdShipCKBody"></tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="card" style="flex:1; min-width:320px;">
+          <div class="h">Other Routes (Transit)</div>
+          <div class="table-scroll">
+            <table class="table compact">
+              <thead>
+                <tr>
+                  <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
+                  <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+                </tr>
+              </thead>
+              <tbody id="pdShipICBody"></tbody>
+            </table>
+          </div>
         </div>
       </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th>
-            <th>Base Cost</th><th>Pieces</th><th>Profit</th>
-          </tr>
-        </thead>
-        <tbody id="pdLPBody"><!-- rows injected --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
-          </tr>
-        </tfoot>
-      </table>
     </section>
 
-    <!-- 8) Influencer Spend -->
+    <!-- ====== Lifetime (by Country) ====== -->
     <section class="section">
-      <h2>Influencer Spend</h2>
-      <div class="card">
+      <h2>Lifetime Summary (by Country)</h2>
+      <div class="row wrap">
+        <input id="pdLPStart" type="date" class="input" />
+        <input id="pdLPEnd" type="date" class="input" />
+        <button id="pdLPRun" class="btn">Run</button>
+      </div>
+      <div class="table-scroll" style="margin-top:10px;">
+        <table class="table compact">
+          <thead>
+            <tr>
+              <th>Country</th><th>Revenue</th><th>Ad Spend</th>
+              <th>Delivery Cost</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+            </tr>
+          </thead>
+          <tbody id="pdLPBody"></tbody>
+          <tfoot>
+            <tr class="totals">
+              <th>Total</th>
+              <th id="pdLPRevT">0</th>
+              <th id="pdLPAdT">0</th>
+              <th id="pdLPShipT">0</th>
+              <th id="pdLPBaseT">0</th>
+              <th id="pdLPPcsT">0</th>
+              <th id="pdLPProfitT">0</th>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
+    </section>
+
+    <!-- ====== Influencers ====== -->
+    <section class="section">
+      <h2>Influencers</h2>
+      <div class="card" style="margin-bottom:10px;">
         <div class="h">Add Influencer</div>
         <div class="row wrap">
-          <input id="pdInfName" class="input" placeholder="Influencer Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
-          <select id="pdInfCountry" class="input"></select>
-          <button id="pdInfAdd" class="btn">Add Influencer</button>
+          <input id="pdInfName" class="input" placeholder="Name" />
+          <input id="pdInfSocial" class="input" placeholder="Social link / handle" />
+          <select id="pdInfCountry" class="input country"></select>
+          <button id="pdInfAdd" class="btn">Add</button>
         </div>
       </div>
 
-      <div class="card">
-        <div class="h">Add Spend</div>
+      <div class="card" style="margin-bottom:10px;">
+        <div class="h">Add Influencer Spend</div>
         <div class="row wrap">
-          <input id="pdInfDate" type="date" class="input"/>
+          <input id="pdInfDate" type="date" class="input" />
           <select id="pdInfSelect" class="input"></select>
-          <select id="pdInfCountrySpend" class="input"></select>
-          <input id="pdInfAmount" type="number" class="input" step="0.01" placeholder="Spend (USD)"/>
+          <select id="pdInfCountry" class="input country"></select>
+          <input id="pdInfAmount" type="number" class="input" placeholder="Amount (USD)" />
           <button id="pdInfSpendAdd" class="btn">Add Spend</button>
         </div>
       </div>
 
-      <div class="card">
-        <div class="h">Filter</div>
-        <div class="row wrap">
-          <input id="pdInfStart" type="date" class="input"/>
-          <input id="pdInfEnd" type="date" class="input"/>
-          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-          <button id="pdInfRun" class="btn outline">Run</button>
-          <span class="badge">Total: <span id="pdInfTotal">0</span> USD</span>
-        </div>
+      <div class="row wrap" style="margin-bottom:10px;">
+        <input id="pdInfStart" type="date" class="input" />
+        <input id="pdInfEnd" type="date" class="input" />
+        <select id="pdInfFilterCountry" class="input country"></select>
+        <button id="pdInfRun" class="btn">Filter</button>
       </div>
 
-      <table class="table">
-        <thead>
-          <tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount (USD)</th><th></th></tr>
-        </thead>
-        <tbody id="pdInfBody"><!-- rows injected --></tbody>
-      </table>
+      <div class="table-scroll">
+        <table class="table compact">
+          <thead>
+            <tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th>Actions</th></tr>
+          </thead>
+          <tbody id="pdInfBody"></tbody>
+          <tfoot>
+            <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
+          </tfoot>
+        </table>
+      </div>
     </section>
   </div>
+</div>
 
-  <script src="/public/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
